2013-05-14  Andrey Borzenkov <arvidjaar@gmail.com>

	* gentpl.py: Replace EXTRA_DIST with dist_noinst_DATA or
	dist_<directory>_DATA. EXTRA_DIST is ignored by automake inside
	false conditions.
	* conf/Makefile.common: define dist_grubconf_DATA

2013-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Progressively skip menu elements on small terminals rather
	than crashing.

2013-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (grub_cmdline_get): Fix off-by-one error
	to avoid losing last column.

2013-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/exclude.pot: Add missing string "%C".

2013-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Remove the temporary directory on grub-emu
	after the test.

2013-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Gettextize "Not found" message.

2013-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix distfiles list.
	Reported by: Andrey Borzenkov <arvidjaar@gmail.com>

2013-05-11  Paulo Flabiano Smorigo  <pfsmorigo@br.ibm.com>

	* grub-core/net/bootp.c (grub_cmd_bootp): Check if there is any card
	present.
	* include/grub/err.h (grub_err_t): New enum value GRUB_ERR_NET_NO_CARD.

2013-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/setjmp_test.c: Ignore missing noreturn.

2013-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfspluscomp.c (grub_hfsplus_compress_attr): Add packed
	attribute since structure is not necessarily aligned.

2013-05-11  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Device syntax): Clarify description of network
	drives.

2013-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Redirect xasprintf to grub_xvasprintf rather than having #ifdef's
	for vasprintf presence.

2013-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Handle efibootmgr presence check.
	Reported by: Leif Lindholm.

2013-05-10  Vladimir Serbinenko  <phcoder@gmail.com>
